--- a/.github/workflows/publish-artifac.yml
+++ b/.github/workflows/publish-artifac.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Step 2 - Add artifacts to publish to the temp folder
         run: |
           cd downloads
-          cp . ../config
-          cp . ../main.py
+          config
+          main.py
           cd ..
 
       - name: Step 3 - Use the upload Artifact github action
