--- a/.github/workflows/publish-artifac.yml
+++ b/.github/workflows/publish-artifac.yml
@@ -14,15 +14,17 @@ jobs:
       - name: Step 1 - Create a temporary artifact downloads folder
         run: mkdir downloads
 
-      - name: Step 2 - Add artifacts to publish to the temp folder
-        run: |
-          cd downloads
-          config
-          main.py
-          cd ..
+      # - name: Step 2 - Add artifacts to publish to the temp folder
+      #   run: |
+      #     cd downloads
+      #     config
+      #     main.py
+      #     cd ..
 
       - name: Step 3 - Use the upload Artifact github action
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: movie-api
-          path: downloads
+          path: |
+            config
+            main.py
