--- a/.github/workflows/publish-artifac.yml
+++ b/.github/workflows/publish-artifac.yml
@@ -14,19 +14,16 @@ jobs:
       - name: Step 1 - Create a temporary artifact downloads folder
         run: mkdir downloads
 
-      # - name: Step 2 - Add artifacts to publish to the temp folder
-      #   run: |
-      #     cd downloads
-      #     config
-      #     main.py
-      #     cd ..
+      - name: Step 2 - Add artifacts to publish to the temp folder
+        run: |
+            cd downloads
+            ./config/
+            models/
+            ./main.py
+            cd ..
 
       - name: Step 3 - Use the upload Artifact github action
         uses: actions/upload-artifact@v3
         with:
           name: movie-api
-          path: |
-            cd downloads
-            ./config/
-            models/
-            ./main.py
+          path: downloads
