--- a/.github/workflows/publish-artifac.yml
+++ b/.github/workflows/publish-artifac.yml
@@ -16,11 +16,7 @@ jobs:
 
       - name: Step 2 - Add artifacts to publish to the temp folder
         run: |
-            cd downloads
-            ./config/
-            models/
-            ./main.py
-            cd ..
+          mv ./* downloads
 
       - name: Step 3 - Use the upload Artifact github action
         uses: actions/upload-artifact@v3
