--- a/.github/workflows/publish-artifac.yml
+++ b/.github/workflows/publish-artifac.yml
@@ -16,7 +16,8 @@ jobs:
 
       - name: Step 2 - Add artifacts to publish to the temp folder
         run: |
-          mv ./* downloads
+          echo $PATH
+          mv ./config downloads
 
       - name: Step 3 - Use the upload Artifact github action
         uses: actions/upload-artifact@v3
