--- a/.github/workflows/publish-artifac.yml
+++ b/.github/workflows/publish-artifac.yml
@@ -16,9 +16,8 @@ jobs:
 
       - name: Step 2 - Add artifacts to publish to the temp folder
         run: |
-          echo $PATH
-          mv ./config downloads
-        shell: bash
+          cp ${{ github.workspace }}/config/* ./downloads
+          cp ${{ github.workspace }}/main.py ./downloads
 
       - name: Step 3 - Use the upload Artifact github action
         uses: actions/upload-artifact@v3
