--- a/.github/workflows/publish-artifac.yml
+++ b/.github/workflows/publish-artifac.yml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Step 2 - Add artifacts to publish to the temp folder
         run: |
-          cp ${{ github.workspace }}/config/* ./downloads
-          cp ${{ github.workspace }}/main.py ./downloads
+          cp /home/runner/work/movie-api-python/config/* ./downloads
+          cp /home/runner/work/movie-api-python/main.py ./downloads
 
       - name: Step 3 - Use the upload Artifact github action
         uses: actions/upload-artifact@v3
