--- a/.github/workflows/publish-artifac.yml
+++ b/.github/workflows/publish-artifac.yml
@@ -16,8 +16,10 @@ jobs:
 
       - name: Step 2 - Add artifacts to publish to the temp folder
         run: |
-          cp /home/runner/work/movie-api-python/config/* ./downloads
-          cp /home/runner/work/movie-api-python/main.py ./downloads
+          cd downloads
+          mv ${{ github.workspace }}/config/* .
+          mv ${{ github.workspace }}/main.py .
+          cd ..
 
       - name: Step 3 - Use the upload Artifact github action
         uses: actions/upload-artifact@v3
