--- a/.github/workflows/publish-artifac.yml
+++ b/.github/workflows/publish-artifac.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Step 2 - Add artifacts to publish to the temp folder
         run: |
           cd downloads
-          mv ${{ github.workspace }}/config/* .
+          mv ${{ github.workspace }}/config .
           mv ${{ github.workspace }}/main.py .
           cd ..
 
